--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>A Simple Responsive HTML Email</title>
+        <title>McMaster Dragon Boat Weekly Update</title>
         <style type="text/css">
         body {margin: 0; padding: 0; min-width: 100%!important;}
         .content {width: 100%; max-width: 600px;}  
         </style>
     </head>
     <body yahoo bgcolor="#f6f8f1">
-        <table width="100%" bgcolor="#f6f8f1" border="0" cellpadding="0" cellspacing="0">
+        <table width="100%" align="center" bgcolor="#f6f8f1" border="0" cellpadding="0" cellspacing="0">
             <tr>
                 <td>
                     <table class="content" align="center" cellpadding="0" cellspacing="0" border="0">
@@ -19,8 +19,10 @@
                             </td>
                         </tr>
                     </table>
+                    
                 </td>
             </tr>
         </table>
+    <![endif]-->
     </body>
 </html>
