--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>McMaster Dragon Boat Weekly Update</title>
-        <style type="text/css">
-        body {margin: 0; padding: 0; min-width: 100%!important;}
-        .content {width: 100%; max-width: 600px;}  
-        </style>
-    </head>
-    <body yahoo bgcolor="#f6f8f1">
-        <table width="100%" align="center" bgcolor="#f6f8f1" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-                <td>
-                    <table class="content" align="center" cellpadding="0" cellspacing="0" border="0">
-                        <tr>
-                            <td>
-                                Hello!
-                            </td>
-                        </tr>
-                    </table>
-                    
-                </td>
-            </tr>
-        </table>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!--[if !mso]><!-->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!--<![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <!--[if (gte mso 9)|(IE)]>
+    <style type="text/css">
+        table {border-collapse: collapse;}
+    </style>
     <![endif]-->
-    </body>
+</head>
+<body>
+    <center class="wrapper">
+        <div class="webkit">
+            [content goes here]
+        </div>
+    </center>
+</body>
 </html>
